--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 </head>
 <body>
     <div id="root" class="container">
+        <div id="cont_area">
+            <div id="coar_user"></div>
+            <div id="coar_newmsg"></div>
+            <div id="coar_src"></div>
+            <div id="contact_list"></div>
+        </div>
+        <div id="chat_area">
+            <div id="char_chcont"></div>
+            <div id="char_conv">
+            </div>
+            <div id="char_board"></div>
+        </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
     <script src="js/main.js"></script>
