--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
                     <input type="search" id="cont_src" placeholder="Cerca o inizia una nuova chat">
                 </div>
             </div>
-            <div id="contact_list"></div>
+            <div id="contact_list">
+                <div class="contact" v-for="contact in contacts">
+                    <div class="avatar_cont">
+                        <img :src="'img/avatar'+contact.avatar+'.jpg'" alt="contact.name">
+                    </div>
+                    <p>{{contact.name}}</p>
+                </div>
+            </div>
         </div>
         <div id="chat_area">
             <div id="char_chcont">
@@ -56,10 +63,13 @@
                 </div>
             </div>
             <div id="char_conv">
+                <ul>
+                    <li v-for="msg in boardMsg" :class="(msg.status == 'sent')?'msg_sent':'msg_rec'">{{msg.text}}</li>
+                </ul>
             </div>
             <div id="char_board">
                 <div id="emojis"><i class="far fa-smile"></i></div>
-                <div id="msg_bar"><input id="write_msg" type="text" placeholder="Scrivi un messaggio"></div>
+                <div id="msg_bar"><input @keyup.enter="addMsg" id="write_msg" type="text" placeholder="Scrivi un messaggio" v-model="newMsg"></div>
                 <div id="vocal_msg"><i class="fas fa-microphone"></i></div>
             </div>
         </div>
