--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 </div>
             </div>
             <div id="contact_list">
-                <div class="contact" v-for="(contact, i) in contacts" @click="showMsg(i)">
+                <div class="contact" v-for="(contact, i) in contacts" :class="(i == x)?'active':null" @click="showMsg(i)">
                     <div class="avatar_cont">
-                        <img :src="'img/avatar'+contact.avatar+'.jpg'" alt="contact.name">
+                        <img :src="'img/avatar'+contact.avatar+'.jpg'" :alt="contact.name">
                     </div>
                     <p>{{contact.name}}</p>
                 </div>
@@ -50,7 +50,7 @@
         <div id="chat_area">
             <div id="char_chcont">
                 <div class="chcont_left">
-                    <div id="chcont_pic"><img :src="'img/avatar_'+(x+1)+'.jpg'" alt="contacts[x].name"></div>
+                    <div id="chcont_pic"><img :src="'img/avatar_'+(x+1)+'.jpg'" :alt="contacts[x].name"></div>
                     <ul>
                         <li class="chcont_name">{{contacts[x].name}}</li>
                         <li class="last_access">Ultimo accesso oggi alle</li>
@@ -63,13 +63,7 @@
                 </div>
             </div>
             <div id="char_conv">
-                <div v-for="msg in boardMsg" :class="(msg.status == 'sent')?'msg_right':'msg_left'">
-                    <div :class="(msg.status == 'sent')?'msg_sent':'msg_rec'">
-                        <p class="msg_text">{{msg.text}}</p>
-                        <p class="msg_date">{{msg.date}}</p>
-                    </div>
-                </div>
-                <div v-for="(message in contacts[x].messages" :class="(message.status == 'sent')?'msg_right':'msg_left'">
+                <div v-for="message in contacts[x].messages" :class="(message.status == 'sent')?'msg_right':'msg_left'">
                     <div :class="(message.status == 'sent')?'msg_sent':'msg_rec'">
                         <p class="msg_text">{{message.text}}</p>
                         <p class="msg_date">{{message.date}}</p>
@@ -78,7 +72,7 @@
             </div>
             <div id="char_board">
                 <div id="emojis"><i class="far fa-smile"></i></div>
-                <div id="msg_bar"><input @keyup.enter="addMsg" id="write_msg" type="text" placeholder="Scrivi un messaggio" v-model="newMsg"></div>
+                <div id="msg_bar"><input @keyup.enter="addMsg(x)" id="write_msg" type="text" placeholder="Scrivi un messaggio" v-model="newMsg"></div>
                 <div id="vocal_msg"><i class="fas fa-microphone"></i></div>
             </div>
         </div>
