--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="css/style.css">
     <title>Boolzap - 23 Marzo</title>
@@ -35,7 +35,7 @@
             <div id="coar_src">
                 <div class="coar_src_container">
                     <div id="coar_src_btn"><i class="fas fa-search"></i></div>
-                    <input type="search" id="cont_src" placeholder="Cerca o inizia una nuova chat">
+                    <input type="search" id="cont_src" placeholder="Cerca o inizia una nuova chat" v-model="search" @keyup.enter="filtra">
                 </div>
             </div>
             <div id="contact_list">
@@ -50,7 +50,7 @@
         <div id="chat_area">
             <div id="char_chcont">
                 <div class="chcont_left">
-                    <div id="chcont_pic"><img :src="'img/avatar_'+(x+1)+'.jpg'" :alt="contacts[x].name"></div>
+                    <div id="chcont_pic"><img :src="'img/avatar'+ contacts[x].avatar +'.jpg'" :alt="contacts[x].name"></div>
                     <ul>
                         <li class="chcont_name">{{contacts[x].name}}</li>
                         <li class="last_access">Ultimo accesso oggi alle</li>
@@ -78,6 +78,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
