--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
                     <div class="avatar_cont">
                         <img :src="'img/avatar'+contact.avatar+'.jpg'" :alt="contact.name">
                     </div>
-                    <p>{{contact.name}}</p>
+                    <div class="contact_info_cont">
+                        <div class="cont_sub_cont">
+                            <p class="contact_name">{{contact.name}}</p>
+                            <p class="last_date">{{getLastDate(i)}}</p>
+                        </div>
+                        <p class="last_msg">{{getLastMsg(i)}}</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -53,7 +59,7 @@
                     <div id="chcont_pic"><img :src="'img/avatar'+ contacts[x].avatar +'.jpg'" :alt="contacts[x].name"></div>
                     <ul>
                         <li class="chcont_name">{{contacts[x].name}}</li>
-                        <li class="last_access">Ultimo accesso oggi alle</li>
+                        <li class="last_access">Ultimo accesso il {{getLastDate(x)}}</li>
                     </ul>
                 </div>
                 <div class="chcont_right">
